// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ce-spacing renders 1`] = `
<ce-spacing>
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
</ce-spacing>
`;

exports[`sc-spacing renders 1`] = `
<sc-spacing>
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
</sc-spacing>
`;
